Added create profile

--- a/Avosa.Innervoice.Core/Avosa.Innervoice.Core.csproj
+++ b/Avosa.Innervoice.Core/Avosa.Innervoice.Core.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnumFunctions.cs" />
     <Compile Include="Confirmer.cs" />
     <Compile Include="IManageProfile.cs" />
     <Compile Include="IStorage.cs" />
